Fix overflow issue on Create React App Flashcard

--- a/assets/css/flashcards/create-react-app-command.css
+++ b/assets/css/flashcards/create-react-app-command.css
@@ -176,7 +176,7 @@ body {
     border-radius: 8px;
     color: var(--text-alt-white);
     background-color: var(--text-alt-blue);
-    overflow-x: scroll;
+    overflow-x: auto;
     white-space: nowrap;
 }
 .code-margin {
